--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  img(src="../public/images/huh.png", alt="")
+  img(src="./public/images/huh.png", alt="")
