--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,5 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  img(src="./public/images/huh.png", alt="")
+  h1= Who goes there?
+  img(src="./images/huh.png", alt="")
